# dbpulse

./: .envrc  .gitignore  .justfile  CHANGELOG.md  CONTAINER.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.production  FINAL_VERIFICATION.md  Makefile  README.md  TESTING.md  TLS_TESTING.md  coverage.lcov
.github/workflows/: build.yml  container.yml  coverage.yml  deploy.yml  integration-test-tls.yml  release.yml  rust.yml  test.yml
.rpm/: dbpulse.spec
grafana/: README.md  dashboard.json  dashboard_update_notes.txt  prometheus.yml
scripts/: README.md  gen-certs.sh  setup-test-dbs.sh
src/: envs.rs  lib.rs  main.rs  metrics.rs  options.rs  pulse.rs  queries.rs  slack.rs  tls.rs
src/cli/: mod.rs  start.rs
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/queries/: mod.rs  mysql.rs  postgres.rs
src/tls/: cache.rs  config.rs  metadata.rs  mod.rs  probe.rs  verifier.rs
tests/: comprehensive_final_test.rs  mariadb_test.rs  mariadb_tls_test.rs  metrics_validation_test.rs  postgres_test.rs  postgres_tls_test.rs  pulse_robustness_test.rs
tests/common/: mod.rs
