[package]
name = "dbpulse"
version = "0.7.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "command line tool to monitor that database is available for read & write"
documentation = "https://github.com/nbari/dbpulse/blob/master/README.md"
homepage = "https://github.com/nbari/dbpulse"
repository = "https://github.com/nbari/dbpulse"
readme = "README.md"
keywords = ["mysql", "monitor", "healthcheck", "database", "metrics"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"
edition = "2024"

[features]
default = []
musl = ["openssl/vendored"]

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["env"]}
dsn = "1"
futures = "0.3"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
prometheus = { version = "0.14", features = ["process"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio", "uuid", "tls-rustls"] }
tokio = { version ="1", features = ["full"]}
uuid = { version = "1.11", features = ["v4"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dbpulse", dest = "/usr/bin/dbpulse", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/dbpulse", "/usr/bin/dbpulse", "755"],
]
depends = ""

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
