[package]
name = "dbpulse"
version = "0.8.3"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "command line tool to monitor that database is available for read & write"
documentation = "https://github.com/nbari/dbpulse/blob/master/README.md"
homepage = "https://github.com/nbari/dbpulse"
repository = "https://github.com/nbari/dbpulse"
readme = "README.md"
keywords = ["mysql", "monitor", "healthcheck", "database", "metrics"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"
edition = "2024"

[features]
default = []

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["env"]}
dsn = "1"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "log", "std"] }
rustls-pemfile = "2"
x509-parser = "0.18"
prometheus = { version = "0.14", features = ["process"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio", "uuid", "tls-rustls"] }
tokio = { version ="1", features = ["full"]}
tokio-rustls = "0.26"
uuid = { version = "1.11", features = ["v4"] }
webpki-roots = "1.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dbpulse", dest = "/usr/bin/dbpulse", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/dbpulse", "/usr/bin/dbpulse", "755"],
]
depends = ""

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
